kubernetes/rendered/staging/services/go-backend-helm/v1_namespace_go-backend-helm.yaml
# Source: minimal/templates/Namespace.go-backend-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-backend-helm
