kubernetes/rendered/staging/services/go-backend-helm/v1_service_go-backend-helm_go-backend.yaml
# Source: minimal/templates/Service.go-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-backend
  namespace: go-backend-helm
spec:
  type: ClusterIP
  selector:
    app: go-backend
  ports:
    - protocol: TCP
      port: 8080 # Port the service is listening on
      targetPort: 8080 # Port the container is listening on (if unset, defaults to equal port value)
