kubernetes/rendered/staging/services/go-backend-helm/networking.k8s.io_v1_ingress_go-backend-helm_minimal-istio.yaml
# Source: minimal/templates/Ingress.minimal-istio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-istio
  namespace: go-backend-helm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: minimal-istio.staging.kubestarterkit.com
spec:
  ingressClassName: istio
  rules:
    - host: minimal-istio.staging.kubestarterkit.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-backend
                port:
                  number: 8080
