kubernetes/rendered/staging/services/go-backend-helm/networking.k8s.io_v1_ingress_go-backend-helm_minimal-nginx.yaml
# Source: minimal/templates/Ingress.minimal-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-nginx
  namespace: go-backend-helm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ingress-nginx-helm.staging.kubestarterkit.com
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-nginx-helm.staging.kubestarterkit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-backend
                port:
                  number: 8080
