kubernetes/rendered/staging/services/go-backend-helm/networking.k8s.io_v1_ingress_go-backend-helm_traefik.yaml
# Source: minimal/templates/Ingress.traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: go-backend-helm
  annotations:
    external-dns.alpha.kubernetes.io/hostname: go-backend-helm-traefik.staging.kubestarterkit.com
spec:
  ingressClassName: traefik
  rules:
    - host: go-backend-helm-traefik.staging.kubestarterkit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-backend
                port:
                  number: 8080
